tests/src/frontend/syntax/invalid/mutable_frozen_method.sk
class C() {
  frozen mutable fun m(): String { "Fail" }
}

fun main(): String {
  C::m()
}
